factor: 用户组件库添加用户上下文